# santa2023

./: .gitignore  Dockerfile  GORILLA.md  LICENSE  README.md  docker-compose.yaml  main.py  puzzle.py  pyproject.toml  requirements.txt  rubik_46_shima.py  tasks.py  vertex.yaml
cube5/: cube5.py
globe/: run_1x8.py  run_2x6.py  run_3x4.py  run_6x10.py  run_6x4.py  run_6x8.py  solve.py  solve_1x2.py  solve_1x4.py  solve_1xn.py  solve_1xn_center.py  solve_greed.py  solve_last.py  solve_trivial.py
input/: puzzles.csv
magic612/: magic3.py  solve61.py
magic622/: allowed_moves.py  magic3.py  solve62.py
merge/: merge.py  watch.py
rubic3/: work.py
rubik2/: graph_too_long.py  pseudo_astar.py  random_operation.py
rubik24/: allowed_moves.py  compress_magic41.py  compress_magic412.py  compress_magic51.py  compress_magic51_diag.py  compress_magic61.py  compress_magic612.py  magic41.py  magic51.py  solve41.py  solve51.py  solve51_diag.py  solve61.py  solve612_Astar.py  solve_bruce_41.py
rubik3/: align_center_deges.py  solve_by_kociemba.py  work.py
rubik4/: pseudo_aster.py
rubik48/: allowed_moves.py  compress_magic42.py  magic42.py  magic4X_edge.py  solve42.py  solve48.py  solve4X.py  solve_bruce_all4.py
rubik72/: allowed_moves.py  compress_magic42.py  magic5NX.py  magic5X.py  solve52.py  solve5X.py  solve72.py
rubik_abstract/: compress_magic51.py  magic41.py  magic51.py
rubik_large/: large_create_temp.py  large_cube.py  large_cube_even.py  large_numba.py  magic61.py  run_33n.py  run_5n.py  shiritori.py  shiritori_33n.py  solve61_parallel.py  view_solver.py
(+55 files in other folders)
