[tool.poetry]
name = "santa2023"
version = "0.1.0"
description = ""
authors = ["sfujiwara <shuhei.fujiwara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
pandas = "^2.2.0"
invoke = "^2.2.0"
jupyter = "^1.0.0"
google-cloud-bigquery = "^3.17.1"
kociemba = "^1.2.1"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
